[package]
name = "simpleredis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.1"
dashmap = "6.0.1"
enum_dispatch = "0.3.13"
futures = "0.3.30"
lazy_static = "1.5.0"
thiserror = "1.0.63"
tokio = { version = "1.39.1", features = ["rt", "rt-multi-thread", "macros", "net"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
